<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="pref">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="helpdesk">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="android_developer_course_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="helpdesk_email">ElanyF@yandex.ru</string>
    <string name="helpdesk_mail_header">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="helpdesk_mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_nothing_found_error_message">Ничего не нашлось</string>
    <string name="search_no_internet_part1">Проблемы со связью</string>
    <string name="search_no_internet_part2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_refresh_button">Обновить</string>
    <string name="search_history_header">Вы искали</string>
    <string name="search_clear_history">Очистить историю</string>
    <string name="audio_track_time">Длительность</string>
    <string name="audio_album_name">Альбом</string>
    <string name="audio_year">Год</string>
    <string name="audio_genre">Жанр</string>
    <string name="audio_country">Страна</string>
    <string name="player_time_default">00:00</string>
    <string name="media_header">Медиатека</string>
    <string name="media_tab1">Избранные треки</string>
    <string name="media_tab2">Плейлисты</string>
    <string name="media_empty_favorites">Ваша медиатека пуста</string>
    <string name="media_no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="media_new_playlist">Новый плейлист</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_media">Медиатека</string>
    <string name="menu_settings">Настройки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="playlist_button">Создать</string>
    <string name="playlist_album_name_hint">Название*</string>
    <string name="playlist_track_count">%1$s треков</string>
    <string name="playlist_track_already_exist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_track_successfully_added">Добавлено в плейлист %1$s</string>
    <string name="playlist_image_successfully_loaded">Картинка успешно загружена</string>
    <string name="playlist_finish_creation">Завершить создание плейлиста?</string>
    <string name="playlist_finish_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_finish">Завершить</string>
    <string name="playlist_finish_cancel">Отмена</string>
    <string name="Playlist_is_created">Плейлист %1$s создан</string>
    <string name="playlist_info_delete_track_q">Удалить трек</string>
    <string name="playlist_info_delete_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="playlist_info_delete_agree">Удалить</string>

    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_edit_playlist">Редактировать информацию</string>
    <string name="menu_delete_playlist">Удалить плейлист</string>
    <string name="playlist_nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="menu_playlist_delete_header">Удалить плейлист</string>
    <string name="menu_playlist_delete_message">Хотите удалить плейлист?</string>
    <string name="menu_playlist_delete_yes">Да</string>
    <string name="menu_playlist_delete_no">нет</string>
    <string name="create_playlist_edit_header">Редактировать</string>
    <string name="create_playlist_save_edited">Сохранить</string>
    <string name="track_show_bs_empty_massage">В этом плейлисте \nнет треков</string>

</resources>