<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/bg_blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_14dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_26sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:layout_marginTop="@dimen/padding_24dp"
        >


        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/padding_16dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/font_22sp"
            app:backgroundTint = "@color/white"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/text_dark"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/padding_16dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/font_22sp"
            app:backgroundTint = "@color/white"
            app:icon="@drawable/music_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/text_dark"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/padding_16dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="@string/pref"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/font_22sp"
            app:backgroundTint = "@color/white"
            app:icon="@drawable/pref_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/text_dark"

            />



    </LinearLayout>
</LinearLayout>