<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newPlaylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity_white"
    android:orientation="vertical"
    tools:context=".media.presentation.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_16dp" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_16dp"
        android:layout_marginTop="@dimen/padding_14dp"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_14dp"
        app:layout_constraintStart_toStartOf="@id/newPlaylist"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_12dp"
            android:layout_marginEnd="@dimen/padding_12dp"
            android:layout_marginBottom="@dimen/padding_12dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/arrow_back"
            app:tint="@color/text_dark" />

        <TextView
            style="@style/ScreenHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/padding_12dp"
            android:text="@string/new_playlist"
            android:textColor="@color/text_dark" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/loadImage"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:background="@drawable/load_image_shape"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:shapeAppearanceOverlay="@style/RoundedCorners" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_photo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/loadImage"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="@id/loadImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPlaylistName"
        style="@style/AddPlaylistFont"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="@dimen/padding_16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_album_name_hint"
        android:textColorHint="@drawable/text_change_selector"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/loadImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPlaylistEditText"
            style="@style/AddPlaylistFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_text_selector"
            android:textColorHint="@color/tumbler_head"
            android:textSize="@dimen/font_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDescription"
        style="@style/AddPlaylistFont"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="@dimen/padding_16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_discription_hint"
        android:textColorHint="@drawable/text_change_selector"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/inputPlaylistName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDescriptionEditText"
            style="@style/AddPlaylistFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_text_selector"
            android:textColorHint="@color/tumbler_head"
            android:textSize="@dimen/font_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreatePlaylist"
        style="@style/PlaylistCreateBtn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="@dimen/padding_16dp"
        android:layout_marginBottom="32dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/playlist_button"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>